# simple_pipe

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  README.md  pyproject.toml
.github/: BRANCH_PROTECTION.md  pull_request_template.md
.github/workflows/: branch-policy.yml  build.yml
configs/demo/: runtime.example.json
configs/demo/graph/: five_node.json  image_src_linear.json  linear.json  safety_fanin.json
configs/demo/node_defaults/: image_src.json  resize.json
docs/: ARCHITECTURE.md  BUILD.md
include/simple_pipe/: enums.hpp  result.hpp
include/simple_pipe/builder/: pipeline_builder.hpp
include/simple_pipe/context/: frame_meta.hpp
include/simple_pipe/log/: logger.hpp
include/simple_pipe/media/: frame_buffer.hpp  frame_meta_builder.hpp  i_media_reader.hpp  media_sample.hpp  opencv_image_reader.hpp  opencv_video_reader.hpp
include/simple_pipe/operators/: node_registry.hpp  operator.hpp
include/simple_pipe/operators/generic/: app_sink.hpp  app_source.hpp  image_source.hpp  mock_detector.hpp  mock_motion.hpp  mock_safety_rules.hpp  mock_tracker.hpp  passthrough.hpp  pull_source.hpp  resize.hpp  source_operator.hpp  video_source.hpp
include/simple_pipe/pipeline/: pipeline_base.hpp  simple_pipeline.hpp
include/simple_pipe/spec/: graph_spec.hpp  runtime_config.hpp
samples/: CMakeLists.txt  run_demo.cpp  run_demo.py  run_five_node_100.cpp  run_five_node_100.py
scripts/: build.sh
scripts/git-hooks/: pre-push
simple_pipe/: __init__.py  enums.py  result.py
simple_pipe/builder/: __init__.py  pipeline_builder.py
simple_pipe/context/: __init__.py  frame_meta.py
simple_pipe/operators/: __init__.py  base.py  registry.py
simple_pipe/operators/generic/: __init__.py  app_des.py  app_src.py  detect_mock.py  motion_mock.py  passthrough.py  resize.py  rules_mock.py  tracker_mock.py
simple_pipe/pipeline/: __init__.py  pipeline_base.py  simple_pipeline.py
simple_pipe/spec/: __init__.py  graph_spec.py  runtime_config.py
src/: CMakeLists.txt
src/builder/: pipeline_builder.cpp
src/context/: frame_meta.cpp
src/log/: logger.cpp
src/media/: frame_meta_builder.cpp  opencv_image_reader.cpp  opencv_video_reader.cpp
src/operators/: node_registry.cpp  operator.cpp
src/operators/generic/: app_sink.cpp  app_source.cpp  image_source.cpp  mock_detector.cpp  mock_motion.cpp  mock_safety_rules.cpp  mock_tracker.cpp  passthrough.cpp  pull_source.cpp  resize.cpp  video_source.cpp
src/pipeline/: pipeline_base.cpp  simple_pipeline.cpp
src/spec/: graph_spec.cpp  runtime_config.cpp
tests/: CMakeLists.txt  test_builder.cpp  test_builder.py  test_graphs.cpp  test_helper.hpp  test_image_source.cpp  test_pipeline.cpp  test_pipeline.py  test_runtime_configure.cpp  test_runtime_configure.py
