[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-pipe"
version = "0.1.0"
description = "CSPF — Configurable Stream Processing Framework (PM-Pipeline prototype)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["simple_pipe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
